--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     implementation rootProject.ext.dependencies['appcompat-v7']
+    implementation rootProject.ext.dependencies['okgo']
 }
