--- a/passportlib/src/main/AndroidManifest.xml
+++ b/passportlib/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cc.seedland.inf.passport" />
+    package="cc.seedland.inf.passport" >
+    <application>
+        <activity android:name=".login.LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".register.RegisterActivity"
+            android:screenOrientation="portrait"/>
+    </application>
+</manifest>
