--- a/passportlib/src/main/AndroidManifest.xml
+++ b/passportlib/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cc.seedland.inf.passport" >
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
     <application>
         <activity android:name=".login.LoginActivity"
             android:screenOrientation="portrait"/>
