--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -16,7 +16,16 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            resValue "string", "sit_http_host", "http://test-passport.seedland.cc"
+        }
+
+
         release {
+
+            resValue "string", "sit_http_host", "http://test-passport.seedland.cc"
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
