--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 
     implementation rootProject.ext.dependencies['appcompat-v7']
     implementation rootProject.ext.dependencies['okgo']
+    implementation rootProject.ext.dependencies['gson']
 }
