--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,9 @@ android {
     buildTypes {
         debug {
             resValue "string", "passport_channel", "test"         // PassportSDK的渠道号
-            resValue "string", "passport_key", "test"             // PassportSDK的开发者Key
+            resValue "string", "passport_key", "hay8qwz"          // PassportSDK的开发者Key
+//            resValue "string", "passport_channel", "haqi"
+//            resValue "string", "passport_key", "hueugegey"
         }
         release {
             resValue "string", "passport_channel", "hachi"         // PassportSDK的渠道号
