--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -6,7 +6,7 @@ android {
         minSdkVersion rootProject.ext.build['minSdkVersion']
         targetSdkVersion rootProject.ext.build['targetSdkVersion']
         versionCode 1
-        versionName "1.0"
+        versionName rootProject.ext.build['versionName']
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -14,15 +14,23 @@ android {
 
     buildTypes {
 
+        // 开发调试
         debug {
-            resValue "string", "product_http_host", "http://passport.seedland.cc"
-            resValue "string", "sit_http_host", "http://test-passport.seedland.cc"
+            resValue "string", "http_host", "http://test-passport.seedland.cc"
         }
 
+        // 功能测试-开放动态切换线上线下环境
+        sit {
+            resValue "string", "http_host", "http://test-passport.seedland.cc"
 
+            minifyEnabled true       // 开启混淆
+            zipAlignEnabled true     // 对齐优化
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        // 线上发布
         release {
-            resValue "string", "product_http_host", "http://passport.seedland.cc"
-            resValue "string", "sit_http_host", "http://test-passport.seedland.cc"
+            resValue "string", "http_host", "http://passport.seedland.cc"
 
             minifyEnabled true       // 开启混淆
             zipAlignEnabled true     // 对齐优化
@@ -30,7 +38,29 @@ android {
         }
     }
 
-    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/'] } }
+    sourceSets {
+
+        // 通用代码集合
+        main {
+            java.srcDirs = ['src/main/java', 'src/main/java/']
+        }
+
+        // 测试代码集合
+        sit {
+            java.srcDirs = ['src/main/java', 'src/sit/java']
+        }
+
+        // 开发代码集合
+        debug {
+            java.srcDirs = ['src/main/java', 'src/public/java']
+        }
+
+        // 发布代码集合
+        release {
+            java.srcDirs = ['src/main/java', 'src/public/java']
+        }
+    }
+
 }
 
 dependencies {
@@ -45,22 +75,4 @@ dependencies {
     implementation rootProject.ext.dependencies['gson']
 }
 
-apply plugin: 'maven'
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "http://120.79.27.17/nexus/repository/maven-snapshots/"){
-                authentication(userName:'admin', password:'inf888')
-            }
-            pom.project {
-                groupId 'cc.seedland.inf'
-                artifactId 'passport'
-                version '1.0-SNAPSHOT'
-                packaging 'aar'
-
-            }
-
-        }
-    }
-}
+apply from: 'publish.gradle'
