--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -61,12 +61,20 @@ android {
         }
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     testImplementation 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.13.0'
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.9.1'
+
+    androidTestCompile 'org.mockito:mockito-android:2.13.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
