--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -17,6 +17,8 @@ android {
         // 开发调试
         debug {
             resValue "string", "http_host", "http://test-passport.seedland.cc"
+
+            testCoverageEnabled true
         }
 
         // 功能测试-开放动态切换线上线下环境
@@ -71,12 +73,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     testImplementation 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.13.0'
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.9.1'
+    testImplementation 'org.mockito:mockito-core:2.13.0'
 
-    androidTestCompile 'org.mockito:mockito-android:2.13.0'
+    // PowerMock brings in the mockito dependency
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.0-beta.5'
+//    testImplementation 'org.powermock:powermock-module-junit4-rule:2.0.0-beta.5'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.0-beta.5'
+
+    androidTestImplementation 'org.mockito:mockito-android:2.13.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+//    androidTestImplementation ''
 
     implementation rootProject.ext.dependencies['appcompat-v7']
     implementation rootProject.ext.dependencies['okgo']
@@ -84,3 +91,4 @@ dependencies {
 }
 
 apply from: 'publish.gradle'
+apply from: 'jacoco.gradle'
