--- a/passportlib/jacoco.gradle
+++ b/passportlib/jacoco.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'jacoco'
 
 jacoco {
-    toolVersion = "0.7.4+"
+//    toolVersion = "0.7.4+"
+    toolVersion = "0.8.1"
 }
 
 project.afterEvaluate {
