--- a/passportlib/publish.gradle
+++ b/passportlib/publish.gradle
@@ -30,7 +30,7 @@ publishing {
         library(MavenPublication) {
             groupId 'cc.seedland.inf'
             artifactId 'passport'
-            version rootProject.ext.build['versionName']
+            version passport_version_name
 
             def type = project.hasProperty('buildType') ? buildType : 'Release'
             artifact("$buildDir/outputs/aar/${project.getName()}-${type.toLowerCase()}.aar")
@@ -58,7 +58,7 @@ publishing {
             if(type.equalsIgnoreCase("dev")) { // 开发环境为测试服务器并发布到开发仓库
                 url "http://developer.seedland.cc/nexus/repository/maven-dev/"
             }else if(type.equalsIgnoreCase("release")){ // 发布环境为生产服务器并根据版本选择仓库
-                if (rootProject.ext.build['versionName'].contains("SNAPSHOT")) {
+                if (passport_version_name.contains("SNAPSHOT")) {
                     url "http://developer.seedland.cc/nexus/repository/maven-snapshots/"
                 } else {
                     url "http://developer.seedland.cc/nexus/repository/maven-releases/"
