--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url 'http://developer.seedland.cc/nexus/repository/maven-snapshots/'
+        }
     }
 }
 
