--- a/config.gradle
+++ b/config.gradle
@@ -1,21 +1,18 @@
 ext {
-    // 构建
-    build = [
-            "compileSdkVersion"                            : 27,
-            "targetSdkVersion"                             : 27,
-            "minSdkVersion"                                : 16,
-            "buildTools"                                   : "27.0.3",
-//            "versionName"                                  : "1.0.1-SNAPSHOT"     // for debug
-            "versionName"                                  : "1.0.2"                  // for dev
-//            "versionName"                                  : "1.0.0"              // for release
+    // SDK及工具版本
+    compile_sdk_version = 27
+    build_tools_version = '27.0.3'
+    min_sdk_version = 16
+    target_sdk_version = 27
 
-    ]
+    // app模块构建版本
+    version_code = 2
+    version_name = '1.0.0'
 
-    dependencies = [
-            "appcompat-v7"                                 : "com.android.support:appcompat-v7:27.0.2",
-            "okgo"                                         : "com.lzy.net:okgo:3.0.4",
-            "gson"                                         : "com.google.code.gson:gson:2.8.2"
-    ]
+    // 库构建版本
+    passport_version_code = 1
+    passport_version_name = '1.1.0-SNAPSHOT'
 
-//    repoPassword = project.hasProperty('repoPassword') ? project.getProperty('repoPassword') : ''
+    // 依赖第三方库版本
+    support_version = '27.1.1'
 }
