--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion rootProject.ext.build['compileSdkVersion']
+    compileSdkVersion compile_sdk_version
     defaultConfig {
-        minSdkVersion rootProject.ext.build['minSdkVersion']
-        targetSdkVersion rootProject.ext.build['targetSdkVersion']
-        versionCode 1
-        versionName rootProject.ext.build['versionName']
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
+        versionCode passport_version_code
+        versionName passport_version_name
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -65,9 +65,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 //    androidTestImplementation ''
 
-    implementation rootProject.ext.dependencies['appcompat-v7']
-    implementation rootProject.ext.dependencies['okgo']
-    implementation rootProject.ext.dependencies['gson']
+    implementation "com.android.support:appcompat-v7:$support_version"
+//    implementation rootProject.ext.dependencies['okgo']
+//    implementation rootProject.ext.dependencies['gson']
+
+    implementation('cc.seedland.inf:network:1.0.1-SNAPSHOT@aar') {
+        transitive = true
+        changing = true
+    }
+
+
 }
 
 apply from: 'publish.gradle'
