--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -49,6 +49,10 @@ android {
 
 }
 
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 1, 'seconds'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
