--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
-        classpath 'digital.wup:android-maven-publish:3.1.1'
+//        classpath 'digital.wup:android-maven-publish:3.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,7 +22,9 @@ allprojects {
         google()
         jcenter()
         maven{
-            url 'http://developer.seedland.cc/nexus/repository/maven-snapshots/'
+//            url 'http://developer.seedland.cc/nexus/repository/maven-snapshots/'
+//            url 'http://developer.seedland.cc/nexus/repository/maven-public/'
+            url 'http://developer.seedland.cc/nexus/repository/maven-dev/'
         }
     }
 }
