--- a/config.gradle
+++ b/config.gradle
@@ -11,7 +11,9 @@ ext {
 
     // 库构建版本
     passport_version_code = 1
-    passport_version_name = '1.1.0-SNAPSHOT'
+//    passport_version_name = '1.1.0-SNAPSHOT'
+//    passport_version_name = '1.1.0-dev'
+    passport_version_name = '1.1.0'
 
     // 依赖第三方库版本
     support_version = '27.1.1'
