重构-完成实地蓝模版

--- a/passportlib/src/main/AndroidManifest.xml
+++ b/passportlib/src/main/AndroidManifest.xml
@@ -8,24 +8,16 @@
     <!--<uses-permission android:name="android.permission.READ_PHONE_STATE"/>-->
 
     <application>
-        <activity android:name=".login.LoginPasswordOActivity"
-            android:screenOrientation="portrait"
+
+        <activity android:name=".login.LoginPasswordActivity"
             android:theme="@style/SeedLandTheme"/>
         <activity android:name=".login.LoginCaptchaActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/SeedLandTheme"/>
         <activity android:name=".register.RegisterActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/SeedLandTheme" />
         <activity android:name=".password.ResetPasswordActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/SeedLandTheme" />
         <activity android:name=".password.ModifyPasswordActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/SeedLandTheme" />
-
-        <!-- 模版 -->
-        <activity android:name=".login.LoginActivity"
-            android:theme="@style/SeedLandTheme"/>
     </application>
 </manifest>
