--- a/passportlib/build.gradle
+++ b/passportlib/build.gradle
@@ -12,7 +12,7 @@ android {
 
         resValue "string", "channel", "test"         // SDK的渠道号
         resValue "string", "key", "hay8qwz"          // SDK的开发者Key
-        resValue "string", "template", "seedblue"    // 模版：seedblue-实地蓝；hachired-哈奇红
+        resValue "string", "template", "hachi"    // 模版：default-实地；hachi-哈奇
 
         buildConfigField("boolean", "API_ENV", "true")
 
@@ -58,37 +58,29 @@ configurations.all {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.13.0'
-
     // PowerMock brings in the mockito dependency
     testImplementation 'org.powermock:powermock-module-junit4:2.0.0-beta.5'
-//    testImplementation 'org.powermock:powermock-module-junit4-rule:2.0.0-beta.5'
+    //    testImplementation 'org.powermock:powermock-module-junit4-rule:2.0.0-beta.5'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.0-beta.5'
-
     androidTestImplementation 'org.mockito:mockito-android:2.13.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-//    androidTestImplementation ''
-
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation('cc.seedland.inf:network:1.0.0@aar') {
         transitive = true
         changing = true
     }
-
     implementation('cc.seedland.inf:corework:1.0.0@aar') {
         changing = true
     }
-
-//    implementation('cc.seedland.inf:network:1.0.1-SNAPSHOT@aar') {
-//        transitive = true
-//        changing = true
-//    }
-
-
+    //    implementation('cc.seedland.inf:network:1.0.1-SNAPSHOT@aar') {
+    //        transitive = true
+    //        changing = true
+    //    }
+    implementation "com.android.support:design:$support_version"
 }
 
 apply from: 'publish.gradle'
