--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         debug {
             resValue "string", "channel", "test"         // PassportSDK的渠道号
             resValue "string", "key", "hay8qwz"          // PassportSDK的开发者Key
-            resValue "string", "template", "hachi"       // 模版：default-实地；hachi-哈奇
+//            resValue "string", "template", "hachi"       // 模版：default-实地；hachi-哈奇
 
 //            minifyEnabled true
 //            shrinkResources true
